# feed

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  styles.css  tailwind.config.js
.github/workflows/: deploy.yml
output/: feeds_to_prune.txt  index.html  index1.html  index10.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  index8.html  index9.html
src/feed/: __init__.py  config.ini  feed.py
src/feed/templates/: base.html  content.html  sidebar.html
