[project]
name = "feed"
version = "0.1.0"
description = "Modern Python Planet alernative POC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reader>=3.14",
    "feedparser>=6.0.11",
    "pytz>=2024.1",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feed"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
    "pytailwindcss>=0.2.0",
    "nodeenv>=1.9.1",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "COM812", "ISC001", "T201"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88
